--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,9 @@ dependencies:
   image_picker: ^1.0.4
   intl: ^0.18.1
   latlong2: ^0.9.0
+  onesignal_flutter: ^5.0.3
   salomon_bottom_bar: ^3.3.2
+  shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
