--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,16 +36,20 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_map: ^6.0.1
+  flutter_polyline_points: ^2.0.0
   flutter_signin_button: ^2.0.0
   geolocator: ^10.1.0
+  google_maps_flutter: ^2.5.0
   http: ^1.1.0
   image_picker: ^1.0.4
   intl: ^0.18.1
   latlong2: ^0.9.0
-  onesignal_flutter: ^5.0.3
+  location: ^5.0.3
+  permission_handler: ^11.0.1
   salomon_bottom_bar: ^3.3.2
   shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
