--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
  <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
  <uses-permission android:name="android.permission.INTERNET" />
+ <uses-permission android:name="android.permission.CALL_PHONE" />
+<uses-permission android:name="android.permission.CALL_PHONE" />
+
 
     <application
         android:label="taxi_app_user"
