--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
  <uses-permission android:name="android.permission.INTERNET" />
  <uses-permission android:name="android.permission.CALL_PHONE" />
 <uses-permission android:name="android.permission.CALL_PHONE" />
-
+   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:label="taxi_app_user"
@@ -40,3 +41,4 @@
                android:value="AIzaSyAWktkmf1xJM-2dQriSVBNm15Ai8XHweCo"/>
     </application>
 </manifest>
+ 
