--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,30 +37,28 @@ dependencies:
   firebase_auth: ^4.14.1
   firebase_core: ^2.23.0
   firebase_messaging: ^14.7.5
+  firebase_storage: ^11.5.6
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_map: ^6.0.1
   flutter_polyline_points: ^2.0.0
-  flutter_signin_button: ^2.0.0
   fluttertoast: ^8.2.4
+  geocoding: ^2.1.1
   geolocator: ^10.1.0
   google_maps_flutter: ^2.5.0
   google_polyline_algorithm: ^3.1.0
   http: ^1.1.0
-  image_picker: ^1.0.4
+  image_picker: ^1.0.5
   intl: ^0.18.1
   latlong2: ^0.9.0
-  location: ^5.0.3
   lottie: ^2.7.0
-  msh_checkbox: ^2.0.1
   permission_handler: ^11.0.1
   razorpay_flutter: ^1.3.5
   salomon_bottom_bar: ^3.3.2
   shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0
   url_launcher: ^6.2.1
-  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
